# react-agent-engine

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  aegra.json  agent.ipynb  classifier.py  deploy.sh  detector.py  docker-compose.yml  env-to-gcloud-envs.sh  langgraph.json  owlv2.ipynb  prompt.md  pyproject.toml  ragas.ipynb  scold.ipynb
data/langsmith/: ood_dataset.json  vqa_dataset.json  vqa_identification_examples.json
data/langsmith/results/: tabel_id.csv  tabel_ood.csv
data/langsmith/results/ood/: experiment-vqa-ood-scenario1-20260125-1439-7edf7bc0.csv  experiment-vqa-ood-scenario2-20260129-0809-ed883d77.csv  experiment-vqa-ood-scenario3-20260125-1947-2adfbc3f.csv
data/plantwild/evaluation/: metadata.json  reference_context.json
evaluation/: domain_boundary_evaluation.py  evaluation.py  generate_vqa_dataset.ipynb  sanity_check.ipynb  vqa_evaluation.py
models/owlv2/: image_processing_owlv2.py  preprocessor_config.json  tokenizer_config.json
scripts/: onnx_inference.py
src/agent/: __init__.py  ablation_configs.py  classifier.py  detector.py  graph.py  prompts.py  utils.py
src/agent/prompts/: no_detection_prompt.txt  no_retrieval_prompt.txt  no_tools_prompt.txt
